# homesec-server

./: .gitignore  CMakeLists.txt  homesec-server-config.js
Modules/: FindCppCms.cmake  FindMAGIC.cmake
debian/: postinst
src/: login_details.hpp  login_details.tmpl  main.cpp
src/static/: footer.html  header.html  style.css
